--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,1 @@
-include LICENSE README.md requirements.txt requirements_dev.txt VERSION
+include LICENSE README.rst requirements.txt requirements_dev.txt VERSION
