--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,6 @@ jobs:
         provider: pypi
         user: $PYPI_USERNAME
         password: $PYPI_PASSWORD
+        skip_cleanup: true
         on:
           tags: true
