--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,2 @@
-include LICENSE README.rst requirements.txt requirements_dev.txt VERSION
+include LICENSE README.rst VERSION
+include requirements*.txt
