--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ jobs:
 
     - stage: deploy
       before_script:
-        - pip install -e .[dev]
+        - pip install -e .[docs]
       script:
         - pushd docs && make html && popd
         - cp _redirects docs/build/html
