--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ jobs:
   include:
 
     - stage: test
+      before_script:
+        - pip install pylint~=2.1.0
       script:
         - python setup.py test
         - pylint setup.py torchrl tests experiments
