--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-click~=7.0.0
-cloudpickle~=0.6.0
-gym~=0.10.0
-numpy~=1.15.0
-ruamel.yaml~=0.15.0
-scipy~=1.1.0
-tensorboard~=1.12.0
-tensorboardX~=1.4
-tensorflow~=1.12.0
-torch~=1.0.0
-tqdm~=4.27.0
+click>=7.0
+cloudpickle>=0.6
+gym>=0.10
+numpy>=1.15
+ruamel.yaml>=0.15
+scipy>=1.1
+tensorboard>=1.12
+tensorboardX>=1.6
+tensorflow>=1.12
+torch>=1.0
+tqdm>=4.30
