--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
 
     - stage: test
       before_script:
-        - pip install .[test]
+        - pip install -e .[test]
       script:
         - pytest
         - pylint setup.py torchrl examples
